[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-validity"
version = "2.2.1"
description = "NetBox plugin for network devices validation"
authors = [
    {name = "Anton Miasnikov", email = "anton2008m@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Framework :: Django",
    "Topic :: System :: Networking",
    "Topic :: Internet",
]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools.packages.find]
include = ["validity*"]

[tool.setuptools.package-data]
validity = ["*.html"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements/base.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements/dev.txt"]}
docs = {file = ["requirements/docs.txt"]}

[tool.pytest.ini_options]
addopts = "-p no:warnings -vv --no-migrations"
testpaths = ["validity/tests"]
DJANGO_SETTINGS_MODULE = "netbox.settings"
pythonpath = ["/opt/netbox/netbox"]

[tool.coverage.run]
branch = true
omit = [
        "validity/tests/*",
        "validity/migrations/*",
]
source = ["validity"]

[tool.coverage.report]
show_missing = true
fail_under = 75


[tool.ruff]
include = ["validity/**.py"]
exclude = ["migrations", "__pycache__", "development"]
line-length = 120
indent-width = 4
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "T", "I"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"validity/netbox_changes.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["validity"]
no-lines-before = ["local-folder"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
